# CppTD

./: BUILD.md  Build.md  CMakeLists.txt  build.ps1  build_log.txt  create_setup.ps1  log.txt  readme.md  resources.qrc  style.qss
.github/: copilot-instructions.md
WeatherStation_Setup/data/: measurements.txt
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
build_release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_release/weather_station_console_autogen/: deps
build_release/weather_station_qt_autogen/: deps
build_release/weather_station_qt_autogen/UVLADIE3JM/: moc_MainWindow.cpp.d
data/: measurements.txt  weather.db
include/: Analyzer.h  ConsoleUtf8.h  Measurement.h  WeatherStation.h
src/: AddMeasurementDialog.cpp  AddMeasurementDialog.h  Analyzer.cpp  MainWindow.cpp  MainWindow.h  Measurement.cpp  WeatherStation.cpp  main.cpp  main_qt.cpp
src/output/data/: measurements.txt
supabase/functions/weather-api/: index.ts
supabase/migrations/: 20251222204031_create_measurements_table.sql
web/: README.md  index.html  main.js  migrate-data-deno.ts  migrate-data-sql-js.js  migrate-data-sqlite.js  migrate-data.js  mock-server.js  package-lock.json  package.json  style.css  vite.config.js
